add css and html nav bar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
         <script type="text/javascript" src="javascript/models/character.js"></script>
         <script type="text/javascript" src="javascript/index.js"></script>
     </head>
+
     <body>
-        <h1>Bojack Love</h1>
-        <div id="character-fact-list"></div>
+        <div class="navbar">
+            <h6>Bojack Attack</h6>
+        </div>
+
+        <div class=“row”>
+            <p> hi </p>
+            <div class= "col" id=“large-img”></div>
+        </div>
+
     </body>
 </html>
