--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
         <script type="text/javascript" src="javascript/services/API.js"></script>
         <script type="text/javascript" src="javascript/models/fact.js"></script>
         <script type="text/javascript" src="javascript/models/character.js"></script>
-        <script type="text/javascript" src="javascript/index.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </head>
 
     <body>
         <div class="navbar">
-            <h6>Bojack Attack</h6>
+            <h2>Bojack Attack</h2>
         </div>
 
-        <div class=“row”>
-            <p> hi </p>
-            <div class= "col" id=“large-img”></div>
+        <div>
+            <img src="https://www.comingsoon.net/assets/uploads/2015/06/BojackBanner.png" id="giant">
         </div>
+
+        <div class="grid-container">
+        </div>
+
+        
+
+
+
+
+
+
+
+
+
+
 
     </body>
 </html>
