add static addFacts

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Bojack Attack</title>
+        <link rel=“stylesheet” href= "https://use.typekit.net/gqj6ril.css">
         <link rel="stylesheet" href="css/index.css">
         <script type="text/javascript" src="javascript/services/API.js"></script>
         <script type="text/javascript" src="javascript/models/fact.js"></script>
@@ -15,18 +16,30 @@
         </div>
 
         <div>
-            <img src="https://www.comingsoon.net/assets/uploads/2015/06/BojackBanner.png" id="giant">
+            <img src="https://media.gq.com/photos/59b04ce77246eb56980aca25/64:25/w_1920,h_750,c_limit/bojack-horseman-review.jpg" id="giant">
         </div>
+
+        <div id="direction-container">
+            <h1>How to Use Bojack Attack</h1>
+            <p>Bojack Attack is a web application dedicated to helping determine your mood. Click on a character's trait button to learn about their personality. 
+               Click on a character's mood button that you relate to most that day.
+            </p>
+        </div>
+
+
+
 
         <div class="grid-container">
         </div>
 
-        
-
-
-
-
-
+        <!-- <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+              </div>
+              <div class="flip-card-back">
+              </div>
+            </div>
+        </div> -->
 
 
 
